--- a/leaflet/leaflet.css
+++ b/leaflet/leaflet.css
@@ -388,13 +388,13 @@
 	text-align: center;
 	}
 .leaflet-popup-content-wrapper {
-	#padding: 1px;
+	padding: 1px;
 	text-align: left;
 	border-radius: 12px;
 	}
 .leaflet-popup-content {
-	margin: -5px -5px -5px -5px;
-	#line-height: 1.4;
+	margin: 5px 5px;
+	line-height: 1.4;
 	}
 .leaflet-popup-content p {
 	margin: 18px 0;
@@ -409,7 +409,7 @@
 .leaflet-popup-tip {
 	width: 17px;
 	height: 17px;
-	#padding: 1px;
+	padding: 1px;
 
 	margin: -10px auto 0;
 
@@ -423,7 +423,7 @@
 .leaflet-popup-tip {
 	background: #312C8A;
 
-	#box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+	box-shadow: 0 3px 14px rgba(0,0,0,0.4);
 	}
 .leaflet-container a.leaflet-popup-close-button {
 	position: absolute;
@@ -538,7 +538,9 @@
 
 .titleslide {
 	position:fixed;top:20px;left:40px;width:250px;height:480px;padding:40px;background-color:#BAB8BA;opacity: 0.9;border-radius: 8px;border:1px solid #363434
-	
+}
+.titleslide2 {
+	position:fixed;top:20px;left:40px;width:250px;height:100px;padding:40px;background-color:#BAB8BA;opacity: 0.9;border-radius: 8px;border:1px solid #363434
 }
 
 .zoomto {
