--- a/odyssey/sandbox/css/slides.css
+++ b/odyssey/sandbox/css/slides.css
@@ -3,34 +3,77 @@
 #map{position:absolute;top:0;left:0;width:100%;height:100%}
 
 
-#slides_container{display:none;position:absolute;top:30px;bottom:20px;left:40px;width:30%;max-width:300px;height:80%;padding:20px;background-color:#F5F9FC;opacity: 0.9;box-shadow: 5px 5px 5px #5E5E5E;z-index:10}
-#slides_container.visible{display:block !important}
-#slides_container .slide{display:none;overflow-y:auto;padding-right:20px}
-#slides_container .slide.selected{display:block !important}
+#slides_container{display:none;position:absolute;top:30px;left:40px;width:30%;max-width:300px; padding:10px;background-color:#F5F9FC;opacity: 0.9;box-shadow: 5px 5px 5px #5E5E5E;z-index:10}
+#slides_container.visible{margin:bottom:40px; display:block !important }
+#slides_container .slide{display:none;overflow-y:auto;padding-right:20px;}
+#slides_container .slide.selected{margin:bottom:40px; display:block !important}
 #slides_container .slide.selected p{font-family:Arial, sans-s;}
 #slides_container .slide.scrolled img{margin:5px 0;width:100%}
 #slides_container .slide strong{font-family:"AleoBold"}
 #slides_container .slide em{font-style:italic}
 #slides_container h1,
-#slides_container h1:after {font-family:Arial, sans-s;color:#333;font-size:40px;margin-bottom:20px;},
+#slides_container h1:after {font-family:'Aboriginal Serif', serif;color:#333;font-size:30px;margin-bottom:20px; text-align:center;},
 #slides_container span{font-family:AleoRegular, Serif;color:#333;font-size:25px;margin:0 0 5px 0}
-#slides_container a{color:#2D7790;text-decoration:none}
-#slides_container a:hover{text-decoration:underline}
+#slides_container a{color:#2D7790;text-decoration:underline; font-size: 16px;}
+#slides_container a:hover{color:#25242e;}
 #slides_container img{margin:5px 0;max-width:100%}
+#slides_container p {margin-bottom:12px;}
+#slides_container h2 {margin-bottom:2px;font-family: Arial, sans-s;}
+#slides_container img[alt=drawing] { margin-left:25%; width:50%;max-width: 150px !important}
+#slides_container h3 {text-align:center; margin-bottom:12px;font-family: Arial, sans-s;}
 
 
-#slides_container_water{display:none;position:absolute;top:20px;left:40px;width:auto;height:100px;padding:20px;padding-right:10px;background-color:#78AB96;opacity: 0.8;border-radius: 8px;border:1px solid #363434;z-index:10}#slides_container_water.visible{display:block !important}#slides_container_water .slide{display:none;overflow-y:auto;padding-right:20px}#slides_container_water .slide.selected{display:block !important}#slides_container_water .slide.scrolled img{margin:5px 0;width:100%}#slides_container_water .slide strong{font-family:"AleoBold"}#slides_container_water .slide em{font-style:italic}#slides_container_water h1,#slides_container_water h2,#slides_container_water h3,#slides_container_water h4,#slides_container_water h5,#slides_container_water h6{font-family:'Proxima N W01 Bold', Sans-serif;color:#333;font-size:25px}#slides_container_water h1:after,#slides_container_water h2:after,#slides_container_water h3:after,#slides_container_water h4:after,#slides_container_water h5:after,#slides_container_water h6:after{display:block;margin:5px 0 5px 0;height:1px;content:" ";text-shadow:none;background-color:#333;width:140px}#slides_container_water h2,#slides_container_water h3,#slides_container_water h4,#slides_container_water h5,#slides_container_water h6{font-size:19px}#slides_container_water h2:after,#slides_container_water h3:after,#slides_container_water h4:after,#slides_container_water h5:after,#slides_container_water h6:after{height:1px;margin:18px 0 18px 0;width:180px}#slides_container_water p,#slides_container_water span{font-family:AleoRegular, Serif;color:#333;font-size:15px;line-height:21px;margin:0 0 5px 0}#slides_container_water a{color:#2D7790;text-decoration:none}#slides_container_water a:hover{text-decoration:underline}#slides_container_water img{margin:5px 0;max-width:100%}
+
+#front_slide.hidden{display:none}
+
+#dots{margin:0 0 20px 0}
+#dots li{display:inline}
+#dots li a{opacity:0.2;color:#333;text-decoration:none;}
+
+#dots li a:before{content:' \25CF';font-size:25px;text-decoration:none;}
+#dots li a.active{opacity:1; color: #2D7790;text-decoration:none;}
+#dots li a:hover{opacity:1;cursor:pointer;text-decoration:none;}
 
 
-#slides_container_run{display:none;position:absolute;top:-8px;left:40px;width:50%;height:100%;padding:20px;padding-right:10px;background-color:#BAB8BA;opacity: 0.8;border-radius: 8px;border:1px solid #363434;z-index:10}#slides_container_run.visible{display:block !important}#slides_container_run .slide{display:none;overflow-y:auto;padding-right:20px}#slides_container_run .slide.selected{display:block !important}#slides_container_run .slide.scrolled img{margin:5px 0;width:100%}#slides_container_run .slide strong{font-family:"AleoBold"}#slides_container_run .slide em{font-style:italic}#slides_container_run h1,#slides_container_run h2,#slides_container_run h3,#slides_container_run h4,#slides_container_run h5,#slides_container_run h6{font-family:'Proxima N W01 Bold', Sans-serif;color:#333;font-size:25px}#slides_container_run h1:after,#slides_container_run h2:after,#slides_container_run h3:after,#slides_container_run h4:after,#slides_container_run h5:after,#slides_container_run h6:after{display:block;margin:5px 0 5px 0;height:1px;content:" ";text-shadow:none;background-color:#333;width:140px}#slides_container_run h2,#slides_container_run h3,#slides_container_run h4,#slides_container_run h5,#slides_container_run h6{font-size:19px}#slides_container_run h2:after,#slides_container_run h3:after,#slides_container_run h4:after,#slides_container_run h5:after,#slides_container_run h6:after{height:1px;margin:18px 0 18px 0;width:180px}#slides_container_run p,#slides_container_run span{font-family:AleoRegular, Serif;color:#333;font-size:15px;line-height:21px;margin:0 0 5px 0}#slides_container_run a{color:#2D7790;text-decoration:none}#slides_container_run a:hover{text-decoration:underline}#slides_container_run img{margin:5px 0;max-width:100%}
+ul#navButtons{position:absolute; bottom:15px; margin-left: 5px;}
+ul#navButtons li{width:30px;display:inline}
+ul#navButtons li a{display:inline-block;width:23px;height:30px;}
+ul#navButtons li a:hover{background-position:-10px -30px;cursor:pointer}
+ul#navButtons li a.next{}
+ul#navButtons li a.next:hover{background-position:-30px -30px}
 
-#front_slide.hidden{display:none}#dots{margin:0 0 20px 0}#dots li{display:inline}#dots li a{opacity:0.2;color:#333}
 
-#dots li a:before{content:' \25CF';font-size:25px}
-#dots li a.active{opacity:1; color: #2D7790;}
-#dots li a:hover{opacity:1;cursor:pointer;text-decoration:none}
+#home-button {
+background-color:#858585; border-radius:5px; height:36px; width:36px;display:inline-block;margin-right:10px; margin-left:10px;
+}
+#forward {
+background-color:#c7503e; border-radius:5px; height:36px; width:56px;display:inline-block;margin-right:30px; margin-left:10px;
+}
+#back {
+background-color:#858585; border-radius:5px; height:36px; width:36px;display:inline-block;margin-right:10px; margin-left:10px;
+}
+#run-button {
+background-color:#858585; border-radius:5px; height:36px; width:58px;display:inline-block;margin-right:10px;
+}
+#run-button a {
+    vertical-align: bottom;
+    color: #F5F9FC;
+    font-size: 12px;
+    font-family:Arial, sans-s;
+    text-decoration: none;
+}
+
+#run-button a :hover{
+    color: #F5F9FC;
+    text-decoration: none;
+}
+
+#home-button img {width:26; height:26;
+}
+#corner a{font-family: 'Californian FB', serif; font-size:14px; text-decoration: none;}
+
+div#credits{position:absolute;bottom:0;left:0;right:0;height:15px;width:195px;background-color:#FFF;opacity:.7;z-index:1000001}div#credits a{color:#ff7373}div#credits span{padding:2px;position:absolute;font-size:11px;text-transform:uppercase}div#credits span.title{left:30px;font-family:'Proxima N W01 Bold', Sans-serif;color:#333}div#credits span.author{right:30px;font-family:AleoRegular, Serif;color:#999;letter-spacing:2px;font-size:10px;text-align:right}
 
 
-ul#navButtons{position: absolute; left: 30px; bottom: 20px;margin:5px 0 0 0}ul#navButtons li{width:30px;display:inline}ul#navButtons li a{display:inline-block;width:23px;height:30px;background:transparent url('../img/navBtns.png?1407168450') no-repeat -10px 0}ul#navButtons li a:hover{background-position:-10px -30px;cursor:pointer}ul#navButtons li a.next{background:transparent url('../img/navBtns.png?1407168450') no-repeat -30px 0}ul#navButtons li a.next:hover{background-position:-30px -30px}
 
-div#credits{position:absolute;bottom:0;left:0;right:0;height:15px;width:195px;background-color:#FFF;opacity:.7;z-index:1000001}div#credits a{color:#ff7373}div#credits span{padding:2px;position:absolute;font-size:11px;text-transform:uppercase}div#credits span.title{left:30px;font-family:'Proxima N W01 Bold', Sans-serif;color:#333}div#credits span.author{right:30px;font-family:AleoRegular, Serif;color:#999;letter-spacing:2px;font-size:10px;text-align:right}.slide-tip{position:absolute;top:-18px;width:3px;height:37px;border:3px solid transparent;border-top:0;border-bottom-color:#ddd;text-align:center}.slide-tip:hover .tooltip{display:inline-block !important}.slide-tip:hover:after{background:#ccc;width:3px}.slide-tip:after{content:"";display:inline-block;background:#ddd;width:1px;height:40px;-moz-transition:all 0.15s ease-in-out;-o-transition:all 0.15s ease-in-out;-webkit-transition:all 0.15s ease-in-out;transition:all 0.15s ease-in-out}.slide-tip .tooltip{position:absolute;display:none;background:rgba(0,0,0,0.85);bottom:50px;max-width:200px;padding:10px;margin-left:-17px;box-shadow:0 0 1px rgba(255,255,255,0.2);border-radius:2px;color:#FFF;line-height:1;text-align:left;font-size:12px;white-space:nowrap}.slide-tip .tooltip h1,.slide-tip .tooltip p{height:auto;padding:0;margin:0;text-align:left;color:#EEE;font-weight:normal;line-height:1.1;width:auto}.slide-tip .tooltip h1{font-weight:bold;margin-bottom:8px;font-size:11px}.slide-tip .tooltip p{white-space:nowrap}.slide-tip .tooltip:after{content:"";display:block;position:absolute;bottom:-5px;left:10px;border-top:5px solid rgba(0,0,0,0.85);border-left:7px solid transparent;border-right:7px solid transparent}div.cartodb-timeslider .ui-slider .ui-slider-range{background-color:#FF7373}.cartodb-timeslider{bottom:50px !important;left:40px !important}
+
