more final edits

--- a/odyssey/sandbox/css/slides.css
+++ b/odyssey/sandbox/css/slides.css
@@ -21,7 +21,7 @@
 #slides_container p {margin-bottom:12px;}
 #slides_container h2 {margin-bottom:2px;font-family: Arial, sans-s;}
 #slides_container img[alt=drawing] { margin-left:25%; width:50%;max-width: 150px !important}
-#slides_container h3 {text-align:center; margin-bottom:12px;font-family: Arial, sans-s;}
+#slides_container h3 {text-align:center; margin-bottom:12px;font-family: Arial, sans-s; font-size:20px;}
 
 
 
